trunk/Archive2/54/ff24586e6ff135/output
main.cpp:2:6: error: 'Grid' has not been declared
 void Grid::drawbug(const vector<T>& vec, const std::string& label, 
      ^
main.cpp:2:26: error: 'vector' does not name a type
 void Grid::drawbug(const vector<T>& vec, const std::string& label, 
                          ^
main.cpp:2:32: error: expected ',' or '...' before '<' token
 void Grid::drawbug(const vector<T>& vec, const std::string& label, 
                                ^
main.cpp: In function 'void drawbug(int)':
main.cpp:6:5: error: 'string' was not declared in this scope
     string empty = "|-|";
     ^
main.cpp:7:10: error: 'vector' was not declared in this scope
     for (vector<T>::iterator it = vec.begin();
          ^
main.cpp:7:18: error: expected primary-expression before '>' token
     for (vector<T>::iterator it = vec.begin();
                  ^
main.cpp:7:19: error: '::iterator' has not been declared
     for (vector<T>::iterator it = vec.begin();
                   ^
main.cpp:8:13: error: 'it' was not declared in this scope
             it != vec.end(); ++it) 
             ^
main.cpp:8:19: error: 'vec' was not declared in this scope
             it != vec.end(); ++it) 
                   ^
main.cpp:10:9: error: 'pair' was not declared in this scope
         pair<int, int> temp_pos = (*it).getPosition();
         ^
main.cpp:10:14: error: expected primary-expression before 'int'
         pair<int, int> temp_pos = (*it).getPosition();
              ^
main.cpp:11:14: error: 'j' was not declared in this scope
         for (j = 0; j < vertical.size(); j++) {
              ^
main.cpp:11:25: error: 'vertical' was not declared in this scope
         for (j = 0; j < vertical.size(); j++) {
                         ^
main.cpp:12:22: error: 'temp_pos' was not declared in this scope
             if (j == temp_pos.first) {
                      ^
main.cpp:14:33: error: 'horizontal' was not declared in this scope
                 for (i = 0; i < horizontal.size(); i++)
                                 ^
main.cpp:16:44: error: 'label' was not declared in this scope
                         horizontal.at(i) = label;
                                            ^
main.cpp:18:44: error: 'empty' was not declared in this scope
                         horizontal.at(i) = empty;
                                            ^
main.cpp:21:33: error: 'horizontal' was not declared in this scope
                 for (i = 0; i < horizontal.size(); i++)
                                 ^
main.cpp:22:21: error: 'cout' was not declared in this scope
                     cout << " " << horizontal.at(i);
                     ^
main.cpp:23:17: error: 'cout' was not declared in this scope
                 cout << endl;
                 ^
main.cpp:23:25: error: 'endl' was not declared in this scope
                 cout << endl;
                         ^
main.cpp: At global scope:
main.cpp:29:6: error: 'Grid' has not been declared
 void Grid::create(const vector<Aphid>& aphidVector, const vector<Ladybug>& ladyVector) 
      ^
main.cpp:29:25: error: 'vector' does not name a type
 void Grid::create(const vector<Aphid>& aphidVector, const vector<Ladybug>& ladyVector) 
                         ^
main.cpp:29:31: error: expected ',' or '...' before '<' token
 void Grid::create(const vector<Aphid>& aphidVector, const vector<Ladybug>& ladyVector) 
                               ^
main.cpp: In function 'void create(int)':
main.cpp:32:5: error: 'vector' was not declared in this scope
     vector<string> vertical(this->height);
     ^
main.cpp:32:12: error: 'string' was not declared in this scope
     vector<string> vertical(this->height);
            ^
main.cpp:32:29: error: invalid use of 'this' in non-member function
     vector<string> vertical(this->height);
                             ^
main.cpp:32:41: error: 'vertical' was not declared in this scope
     vector<string> vertical(this->height);
                                         ^
main.cpp:33:31: error: invalid use of 'this' in non-member function
     vector<string> horizontal(this->length);
                               ^
main.cpp:33:43: error: 'horizontal' was not declared in this scope
     vector<string> horizontal(this->length);
                                           ^
main.cpp:34:13: error: 'Aphid' was not declared in this scope
     drawbug<Aphid>(aphidVector, "|A|", vertical, horizontal};
             ^
main.cpp:34:20: error: 'aphidVector' was not declared in this scope
     drawbug<Aphid>(aphidVector, "|A|", vertical, horizontal};
                    ^
main.cpp:34:60: error: expected ')' before '}' token
     drawbug<Aphid>(aphidVector, "|A|", vertical, horizontal};
                                                            ^
main.cpp: At global scope:
main.cpp:34:61: warning: extra ';' [-Wpedantic]
     drawbug<Aphid>(aphidVector, "|A|", vertical, horizontal};
                                                             ^
main.cpp:35:13: error: 'Ladybug' was not declared in this scope
     drawbug<Ladybug>(ladyVector, "|L|", vertical, horizontal);
             ^
main.cpp:35:5: error: specializing member '::drawbug<<expression error> >' requires 'template<>' syntax
     drawbug<Ladybug>(ladyVector, "|L|", vertical, horizontal);
     ^
main.cpp:36:1: error: expected declaration before '}' token
 }
 ^
